k8s-hu-01/ingress-prometheus-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "prometheus.k8s-hu-01.trinet.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-prometheus
            port:
              number: 9090
